correct upper-block in footer spacing added

--- a/src/components/main-footer/style.scss
+++ b/src/components/main-footer/style.scss
@@ -30,7 +30,7 @@
       color: #ffffff;
     }
     .upper-description-details {
-      max-width: 690px;
+      min-width: 712px;
       margin-top: 20px;
       font-weight: 300;
       font-size: 24px;
